# yggdrasil

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dioxus.toml  Dockerfile  Makefile  README.md  biome.json  build.rs  index.html  input.css  migrate.sh  package.json  pnpm-lock.yaml  prd.json  progress.txt  rust-analyzer.json  rust-analyzer.toml  skills-lock.json  tailwind.config.js
.agents/skills/deploy-to-linux/: SKILL.md
.agents/skills/deploy-to-xun/: SKILL.md
.agents/skills/dioxus-render-purity/: SKILL.md
.agents/skills/optimizing-rust-performance/: SKILL.md
.agents/skills/release/: SKILL.md
.agents/skills/rust-advanced-performance/: SKILL.md
.agents/skills/yggdrasil-ui-design-taste/: SKILL.md
.cargo/: config.toml
.gitea/actions/setup/: action.yml
.gitea/workflows/: ci.yaml
docker/: build-runners.sh
docker/runner-base/: Dockerfile
docker/runner-bun/: Dockerfile  runner.toml
docker/runner-go/: Dockerfile  runner.toml
docker/runner-node/: Dockerfile  runner.toml
docker/runner-python/: Dockerfile  runner.toml
docker/runner-rust/: Dockerfile  run-rust.sh  runner.toml
docs/: DEPLOYMENT.md  test-markdown.md
docs/specs/: assets-management.md
docs/superpowers/plans/: 2026-06-03-dioxus-ssr.md  2026-06-11-comment-localstorage.md  2026-06-22-blur-up-images.md  2026-06-22-upload-placeholder.md  2026-06-25-dioxus-antipatterns-cleanup.md
docs/superpowers/specs/: 2026-06-11-comment-localstorage-design.md  2026-06-22-blur-up-images-design.md  2026-06-22-upload-placeholder-design.md
libs/: biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
libs/codemirror-editor/: package.json  pnpm-lock.yaml  vite.config.ts
libs/codemirror-editor/src/: editor.ts  index.ts  themes.ts
libs/lightbox/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
libs/lightbox/src/: geometry.test.ts  geometry.ts  index.ts  lightbox.test.ts  style.css
libs/mermaid-renderer/: package.json  vite.config.ts
libs/mermaid-renderer/src/: index.ts
libs/patches/: @tiptap__markdown@3.27.3.patch
libs/shared/: package.json  vitest.config.ts
libs/shared/src/: index.test.ts  index.ts
libs/tiptap-editor/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
libs/tiptap-editor/src/: code-block-backspace-fix.ts  code-block-view.ts  footnote.ts  highlight.ts  index.ts  math.ts  mermaid.ts  slash-command.ts  style.css  task-input-rule.ts  upload-coordinator.ts  upload-image.ts
libs/xterm-terminal/: package.json  vite.config.ts
libs/xterm-terminal/src/: css.d.ts  index.ts  terminal.ts  themes.ts
libs/yggdrasil-core/: package-lock.json  package.json  tsconfig.json  vite.config.ts
libs/yggdrasil-core/src/: anchor-click.test.ts  anchor-click.ts  hash-scroll.test.ts  hash-scroll.ts  index.ts  mermaid.test.ts  mermaid.ts  post-content.test.ts  post-content.ts  scroll-to-heading.ts  style.css  theme-transition.test.ts  theme-transition.ts
migrations/: 001_init.sql  002_indexes.sql  002_posts.sql  003_indexes.sql  003_post_cover_image.sql  003_slug_partial_unique.sql  004_comments.sql  004_search_trgm.sql  005_add_toc_html.sql  005_comments.sql  006_add_toc_html.sql  006_settings.sql  008_comments_cascade.sql  009_cleanup_duplicate_indexes.sql  010_post_word_counts.sql  011_perf_indexes.sql  012_session_generation.sql  013_comment_content_hash_index.sql  014_drop_ineffective_trgm_index.sql  015_assets.sql
public/: index.html  style.css
public/js/: lightbox.js  post-content.js
public/tiptap/: editor.css  editor.js  editor.js.map
public/xterm/: terminal.js  terminal.js.map
scripts/: fix-wasm-paths.py  migrate.sh  seed_posts.sql  vt-real-page-sampler.mjs  vt-theme-harness.html  vt-theme-sampler.mjs  vt-xterm-real-sampler.mjs  xun.fish
src/: build_info.rs  cache.rs  codemirror_bridge.rs  context.rs  highlight.rs  main.rs  middleware.rs  router.rs  ssr_cache.rs  sysinfo_sampler.rs  theme.rs  tiptap_bridge.rs  webp.rs  xterm_bridge.rs
src/api/: auth.rs  csrf.rs  error.rs  health.rs  image.rs  katex.rs  markdown.rs  mhchem.rs  mhchem_tables.rs  mod.rs  posts.rs  rate_limit.rs  sanitizer.rs  settings.rs  slug.rs  tags.rs  upload.rs  utils.rs
src/api/assets/: delete.rs  list.rs  mod.rs  rebuild.rs  types.rs
src/api/code_runner/: execute.rs  languages.rs  mod.rs  progress.rs  sse.rs
src/api/comments/: check.rs  create.rs  helpers.rs  list.rs  markdown.rs  mod.rs  read.rs  types.rs  update.rs
src/api/database/: backup.rs  export.rs  mod.rs  schema.rs  sql_console.rs  status.rs  system_status.rs  tasks.rs
src/api/posts/: create.rs  delete.rs  helpers.rs  list.rs  mod.rs  read.rs  rebuild.rs  search.rs  stats.rs  tags.rs  trash.rs  types.rs  update.rs
src/auth/: mod.rs  password.rs  session.rs
src/components/: admin_layout.rs  admin_skeleton.rs  empty_state.rs  footer.rs  forms.rs  frontend_layout.rs  header.rs  image_viewer.rs  mod.rs  nav.rs  page_layout.rs  post_card.rs  sql_result_table.rs  suspense_wrapper.rs  ui.rs  write_skeleton.rs
src/components/code_runner/: mod.rs  runner.rs
src/components/comments/: actions.rs  form.rs  item.rs  list.rs  mod.rs  pending_item.rs  (+1 more)
src/db/: migrate.rs  mod.rs  pool.rs  retry.rs
src/hooks/: comment_storage.rs  delayed_loading.rs  event_listener.rs  mod.rs  query.rs
src/infra/: docker.rs  mod.rs  runner_config.rs
src/middleware/: minify_html.rs  mod.rs
src/models/: asset.rs  comment.rs  mod.rs  post.rs  session.rs  settings.rs  user.rs
src/pages/: about.rs  admin.rs  archives.rs  home.rs  login.rs  mod.rs  not_found.rs  post_detail.rs  register.rs  search.rs  tags.rs
src/tasks/: image_cache_cleanup.rs  ip_purge.rs  mod.rs  post_purge.rs  session_cleanup.rs
src/utils/: comment_storage.rs  html.rs  html_minify.rs  html_minify_bench.rs  js.rs  mod.rs  text.rs  time.rs
static/index/: 6a1fccc1.html
syntaxes/: JSX.sublime-syntax  Swift.sublime-syntax  TSX.sublime-syntax  TypeScript.sublime-syntax  Vue.sublime-syntax  Zig.sublime-syntax
tests/: post_detail_slug_rerun.rs
(+52 files in other folders)
